--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body
 
 
 background: var(--bg-url) no-repeat top center/cover;
+height: 100vh;
 
 }
 
@@ -50,7 +51,8 @@ body * {
 
 
 #container {
-width: 360px;
+width: 100%;
+max-width: 588px;
 margin: 56px auto 0px;
 padding: 0 24px;
 }
@@ -179,4 +181,17 @@ footer {
     text-align: center;
     padding: 24px;
     
+}
+
+
+@media (min-widht: 700px) {
+
+    :root {
+
+        --bg-url: url(./assets/bg-desktop.jpg);
+    }
+
+.light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+}
 }
