--- a/style.css
+++ b/style.css
@@ -1,86 +1,65 @@
-htemplate {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
 }
 
-
-:root
-{
+:root {
     --text-color: white;
     --bg-url: url(./assets/bg-mobile.jpg);
-    --strooke-color: rgba(255, 255, 255, 0.5);
+    --stroke-color: rgba(255, 255, 255, 0.5);
     --surface-color: rgba(255, 255, 255, 0.05);
     --surface-color-hover: rgba(255, 255, 255, 0.02);
-    --highlit-color: rgba(255, 255, 255, 0.2);
+    --highlight-color: rgba(255, 255, 255, 0.2);
     --switch-bg-url: url(./assets/moon-stars.svg);
-
 }
 
- 
-    
-
-.light
-{
+.light {
     --text-color: black;
     --bg-url: url(./assets/bg-mobile-light.jpg);
-    --strooke-color: rgba(0, 0, 0, 0.5);
+    --stroke-color: rgba(0, 0, 0, 0.5);
     --surface-color: rgba(0, 0, 0, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.02);
-    --highlit-color: rgba(0, 0, 0, 0.1);
+    --highlight-color: rgba(0, 0, 0, 0.1);
     --switch-bg-url: url(./assets/sun.svg);
- 
 }
 
-body
-{
-
-
-background: var(--bg-url) no-repeat top center/cover;
-height: 100vh;
-
+body {
+    background: var(--bg-url) no-repeat top center/cover;
+    height: 100vh;
 }
 
 body * {
     font-family: "Inter", sans-serif;
     color: var(--text-color);
-
-
 }
-
 
 #container {
-width: 100%;
-max-width: 588px;
-margin: 56px auto 0px;
-padding: 0 24px;
+    width: 100%;
+    max-width: 588px;
+    margin: 56px auto 0;
+    padding: 0 24px;
 }
 
-#profile
-{text-align: center;
-padding: 24px;}
+#profile {
+    text-align: center;
+    padding: 24px;
+}
 
 #profile img {
-width: 112px;
-
-
+    width: 112px;
 }
 
-#profile p
-{
-font-weight: 500;
-line-height: 24px;
-margin-top: 8px;
-
-
+#profile p {
+    font-weight: 500;
+    line-height: 24px;
+    margin-top: 8px;
 }
 
 #switch {
     position: relative;
-    width: 80px; 
-    margin: 0px auto; 
-   
+    width: 80px;
+    margin: 0 auto;
 }
 
 #switch button {
@@ -93,68 +72,54 @@ margin-top: 8px;
     left: 0;
     z-index: 1;
     transform: translateY(-11%);
-  
-
 }
 
 .light #switch button {
     right: 0;
-left: initial;
+    left: initial;
 }
 
 #switch span {
     display: block;
     height: 24px;
     background: var(--surface-color);
-    border: 1px solid var(--strooke-color);
+    border: 1px solid var(--stroke-color);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     border-radius: 9999px;
-    
 }
 
-
-/*links  */
-
+/* Links */
 ul {
-
     list-style: none;
     display: flex;
     flex-direction: column;
     gap: 16px;
-
     padding: 24px 0;
-
 }
 
 ul li a {
     display: flex;
     justify-content: center;
     align-items: center;
-padding: 16px 24px;
-
-background: var(--surface-color);   
-border: 1px solid var(--strooke-color);
-border-radius: 8px;
-backdrop-filter: blur(4px);
--webkit-backdrop-filter: blur(4px);
-text-decoration: none;
-font-weight: 500;
-transition: background-color 0.2s;
+    padding: 16px 24px;
+    background: var(--surface-color);
+    border: 1px solid var(--stroke-color);
+    border-radius: 8px;
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    text-decoration: none;
+    font-weight: 500;
+    transition: background-color 0.2s;
 }
-
-/* pseudo-selector */
 
 ul li a:hover {
     background: rgba(255, 255, 255, 0.05);
     border: 1.5px solid var(--text-color);
-    
 }
 
-/*social*/
-
-#social-links 
-{
+/* Social */
+#social-links {
     display: flex;
     justify-content: center;
     gap: 16px;
@@ -163,35 +128,28 @@ ul li a:hover {
 }
 
 #social-links a {
-
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 16px;
     transition: background 0.2s;
-
 }
 
-#social-links a :hover {
+#social-links a:hover {
     background: rgba(255, 255, 255, 0.2);
-    
 }
 
 footer {
     text-align: center;
     padding: 24px;
-    
 }
 
-
-@media (min-widht: 700px) {
-
+@media (min-width: 700px) {
     :root {
-
         --bg-url: url(./assets/bg-desktop.jpg);
     }
 
-.light {
-    --bg-url: url(./assets/bg-desktop-light.jpg);
-}
+    .light {
+        --bg-url: url(./assets/bg-desktop-light.jpg);
+    }
 }
